@@ -10775,7 +10775,7 @@ test_eq(`+("human","number",666),"humannumber666")
 test_eq(`+("human","number",666,111),"humannumber666111")
 test_eq(`+("humannumber",`+(666+111)),"humannumber777")
 test_eq(`+("a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","x","y"),"abcdefghijklmnopqrstuvxy")
-test_eq(`+(1.0+1.0),2.0)
+test_eq(`+(1.0,1.0),2.0)
 test_eq(`+(1.0,-1.0),0.0)
 test_eq(`+(-1.0,-1.0),-2.0)
 test_equal(`+(({1,2,3}),({4,5,6})),({1,2,3,4,5,6}))
@@ -10786,6 +10786,9 @@ test_equal(17+class{mixed ``+(mixed n){return (<n>);}}(),(<17>))
 test_equal(1700000000000000000000+class{mixed ``+(mixed n){return (<n>);}}(),(<1700000000000000000000>))
 
 test_eval_error(Gmp.mpz(1700000000000000000000)+class{mixed ``+(mixed n){return (<n>);}}())
+
+test_eq(`+(1.0,2,3.0), 6.0)
+test_eq(`+(1,2.0,3), 6.0)
 
 // - `-
 
